[project]
name = "link-shortener"
version = "0.1.0"
description = "URL shortener service with analytics"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-multipart>=0.0.20",
    "fastapi[standard]>=0.110.0",
    "uvicorn>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.25.3",
    "httpx>=0.27.0",
    "coverage>=7.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]
